--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.3",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.12",
+    "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
@@ -39,7 +40,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "https://edusteinbackend.onrender.com",
   "eslintConfig": {
     "extends": [
       "react-app",
