--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=https://edusteinbackend.onrender.com
+REACT_APP_BACKEND_URL=http://localhost:5000
 REACT_APP_RAZORPAY_KEY=rzp_test_Ljo5RTY9V75z4u
